<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_medication_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_1"
        android:layout_marginStart="@dimen/space_2"
        android:layout_marginEnd="@dimen/space_2"
        android:hint="@string/medication_name"
        android:focusableInTouchMode="false"
        android:theme="@style/input_field_style"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/input_field_error_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_medication_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:theme="@style/input_field_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_medication_unit"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2"
        android:layout_marginEnd="@dimen/space_2"
        android:hint="@string/medication_unit"
        android:focusableInTouchMode="false"
        android:theme="@style/input_field_style"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/input_field_error_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_medication_name">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/spn_medication_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:theme="@style/input_field_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="@dimen/space_2"
        android:layout_marginStart="@dimen/space_2"
        android:layout_marginEnd="@dimen/space_2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_medication_unit"/>


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_next_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_input_layout_medication_unit ,btn_next "/>

</androidx.constraintlayout.widget.ConstraintLayout>